Update: добавил для себя многие проблемы, пожалейте меня это не выносимо((((((

--- a/back/demo/src/main/resources/application.yml
+++ b/back/demo/src/main/resources/application.yml
@@ -6,3 +6,6 @@ spring:
     password: postgres
   liquibase:
     change-log: classpath:db/changelog-master.xml
+jwt:
+  secret: rastishka_na_virost_2024
+  lifetime: 60m
