--- a/back/demo/src/main/resources/application.yml
+++ b/back/demo/src/main/resources/application.yml
@@ -6,3 +6,7 @@ spring:
     password: postgres
   liquibase:
     change-log: classpath:db/changelog-master.xml
+  jpa:
+    show-sql: true
+#server:
+#  port: 8081
