--- a/front/constract-calc-front/package.json
+++ b/front/constract-calc-front/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "^5.0.1",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
